# the-trading-floor-v2

./: .env.example  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _config.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: __init__.py  main.py
backend/agents/: __init__.py  macro_strategist.py  portfolio_chief.py  quant_analyst.py  risk_manager.py  sentiment_scout.py
backend/api/: routes.py
backend/crews/: __init__.py  trading_crew.py
backend/schemas/: __init__.py  outputs.py
backend/tools/: __init__.py  analysis.py  market_data.py
frontend/: package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentMessage.tsx  AgentPanel.tsx  ConversationStream.tsx  ResultsPanel.tsx
frontend/hooks/: useAnalysisStream.ts
frontend/lib/: api.ts
frontend/types/: index.ts
